[gd_scene load_steps=6 format=3 uid="uid://ctblxhi23k0j8"]

[ext_resource type="Texture2D" uid="uid://dppqqrliawhs7" path="res://images/default_world_thumbnail.jpg" id="1_ql4my"]
[ext_resource type="Script" path="res://scenes/main_dashboard/world_management/backup_list_con.gd" id="1_uwod8"]
[ext_resource type="LabelSettings" uid="uid://b8u8o0774kw1b" path="res://scenes/main_dashboard/title_label.tres" id="2_2h5nw"]
[ext_resource type="Texture2D" uid="uid://kb4u5ehp1lrd" path="res://images/red_cross.png" id="3_ykh2e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_40bv4"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[node name="backup_list_con" type="PanelContainer"]
custom_minimum_size = Vector2(0, 20)
size_flags_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_40bv4")
script = ExtResource("1_uwod8")

[node name="hbox" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="world_icon" type="TextureRect" parent="hbox"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
texture = ExtResource("1_ql4my")
expand_mode = 1
stretch_mode = 5

[node name="vbox" type="VBoxContainer" parent="hbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="world_name" type="Label" parent="hbox/vbox"]
layout_mode = 2
text = "world_name"
label_settings = ExtResource("2_2h5nw")

[node name="date_created" type="Label" parent="hbox/vbox"]
layout_mode = 2
text = "Date created:"

[node name="select_button" type="Button" parent="hbox"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
mouse_filter = 1
mouse_default_cursor_shape = 2
text = "Select backup"

[node name="delete_button" type="Button" parent="hbox"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("3_ykh2e")
flat = true
icon_alignment = 1
expand_icon = true
